add logging add exception handling add distribution build