@@ -273,12 +273,36 @@ configure(core) {
 }
 
 configure(server) {
+    apply(plugin: 'application')
+
     dependencies {
         compile(api)
         compile(core)
         compile(console)
         compile(group: 'com.sparkjava', name: 'spark-core', version: '2.6.0')
         testCompile(group: 'junit', name: 'junit', version: '4.5')
+    }
+
+    mainClassName = "com.haulmont.yarg.server.ServerRunner"
+
+    configurations.archives.artifacts.removeAll {
+        it.file =~ 'tar' || it.file =~ 'zip'
+    }
+
+    installDist {
+        doLast {
+            def outputDir = destinationDir
+            copy {
+                from "./../../reporting.properties"
+                into "$outputDir/bin"
+            }
+        }
+    }
+
+    test {
+        maxHeapSize = "512m"
+        jvmArgs '-XX:MaxPermSize=256m'
+        workingDir = new File('../..')
     }
 }
 
@@ -300,20 +324,11 @@ configure(console) {
         it.file =~ 'tar' || it.file =~ 'zip'
     }
 
-    startScripts {
-        doLast {
-            copy {
-                from "reporting.properties"
-                into outputDir
-            }
-        }
-    }
-
     installDist {
         doLast {
             def outputDir = destinationDir
             copy {
-                from "reporting.properties"
+                from "./../../reporting.properties"
                 into "$outputDir/bin"
             }
         }
